# prediction-of-cirrhosis-outcomes

./: .gitignore  README.md  pyproject.toml
model/: catboost_model.cbm  label_encoder.pkl  preprocessor.pkl
notebooks/: cirrhosis_analysis.ipynb
src/: model.py
