[tool.poetry]
name = "prediction-of-cirrhosis-outcomes"
version = "0.1.0"
description = "Prediction of Cirrhosis Outcomes"
authors = ["Ruslan Agafonov & Angelina Chernikova"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
catboost = "^1.2.0"
optuna = "^3.3.0"
lightgbm = "^4.0.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"